Tue Feb 21 0:0:32 1995 Keith Vetter (keithv@fusion.com)

	* func-proto.h: added windows INTERFACE keyword to all functions.
        * krb5.h: moved two typedefs before inclusion of func-proto.h

Mon Feb 20 16:54:51 1995 Keith Vetter (keithv@fusion.com)

	* encryption.h, los-proto.h, rsa-md5.h: added windows 
          INTERFACE keyword.
        * Makefile.in: removed isode cruft ala Feb 10 changes but for windows

Mon Feb 20 12:32:34 1995  John Gilmore  (gnu at toad.com)

	* configure.in:  Flip again.  Use AC_CHECK_HEADERS, but default the
	symbol-setting.  This is Modern Autoconf Style.

	* config.h:  Create from stock/config.h and stock/config.win.
	* Makefile.in (BUILT_HEADERS):  Remove config.h.
	(CONF_REPLACE, CONFSRC, config.h rule):  Remove.  Config.h is
	a static header file, ever since imake died.  Now it really is.
	(clean):  Don't remove config.new any more.

Thu Feb 16 20:12:23 1995  John Gilmore  (gnu at toad.com)

	* configure.in:  Use AC_HAVE_HEADER rather than AC_HEADER_CHECK.
	(Fixes resulting #define names to HAVE_XXX rather than HAS_XXX,
	which is not only consistent but also matches what's in sysincl.h.)

Mon Feb 6 19:42:7 1995 Keith Vetter (keithv@fusion.com)

        * configure.in: added header checks for sys/param.h and sys/file.h.
        * encryption.h: added typedef prototype for sum_func function 
            with the windows api to make microsoft compiler happy.
        * sysincl.h: conditionally include sys/file.h and sys/param.h since
            windows doesn't have them.
        * Makefile.in: 
           - changed macros with ${...} to $(...) since nmake barfs on {}.
           - added windows only make preamble 
           - split the all target into unix and windows branches

Fri Feb 10 14:54:26 1995  Theodore Y. Ts'o  <tytso@dcl>

	* asn1.h: Removed ISODE cruft -- moved included .h files into
		asn1.h, to simplify the krb5 header file structure.

	* Makefile.in (ET_HEADERS): Remove isode cruft.
